--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
-.app {
-  text-align: left;
+.logapp {
+  text-align: center;
   background-color: rgb(228, 228, 228);
+  color: white
 }
 
+.app {
+  text-align: left;
+  background-color: rgb(230, 230, 230);
+  color: black;
+}
 
 
 
