--- a/test/src/components/Loginpage.css
+++ b/test/src/components/Loginpage.css
@@ -1,12 +1,17 @@
 .login {
-    min-height: 100%;
-    width: 30%;
     text-align: center;
+    width: 30%;
     background-color: rgb(117, 165, 255);
-    color: white;
+    color: black;
   }
 
-.logbg {
+.test{
+  width: 70%;
+  background-color: ffffff;
+}
+
+.container {
   height: 100vh;
+  width: 100vh;
   background-color: rgb(204, 204, 204);
 }
