--- a/test/src/components/Loginpage.css
+++ b/test/src/components/Loginpage.css
@@ -1,6 +1,7 @@
-.login {
+#login {
     text-align: center;
-    width: 35%;
+    width: 20%;
+    min-width: 300px;
     height: 100vh;
     background-color: #5B84D7;
     color: black;
@@ -8,9 +9,8 @@
 
 #tabs{
   text-align: center;
-  width: 35%;
-  height: 100%;
-
+  width: 20%;
+  min-width: 300px;
   background-color: #5B84D7;
   color: black;
 }
@@ -18,6 +18,11 @@
 #tabs .col {
   padding-left: 0px;
   padding-right: 0px;
+  height: 25%;
+}
+
+#tab_name{
+  color: white;
 }
 
 .container {
@@ -30,6 +35,7 @@
   background-color: #5B84D7;
   width: 50%;
   border-radius: 0px 0px 5px 0px;
+  color: white;
 }
 
 #register{
