--- a/test/src/components/landing_page/LandingPage.css
+++ b/test/src/components/landing_page/LandingPage.css
@@ -2,6 +2,7 @@
     text-align: center;
     width: 20%;
     min-width: 300px;
+    max-width: 300px;
     height: 100vh;
     background-color: #5B84D7;
     color: black;
@@ -11,6 +12,7 @@
   text-align: center;
   width: 20%;
   min-width: 300px;
+  max-width: 300px;
   background-color: #5B84D7;
   color: black;
 }
