--- a/test/src/components/landing_page/LandingPage.css
+++ b/test/src/components/landing_page/LandingPage.css
@@ -8,7 +8,8 @@
     color: black;
   }
 
-#tabs{
+#login_space{
+  height: 100vh;
   text-align: center;
   width: 20%;
   min-width: 300px;
@@ -17,10 +18,11 @@
   color: black;
 }
 
-#tabs .col {
+#login_space .col {
   padding-left: 0px;
   padding-right: 0px;
   height: 25%;
+  width:100%;
 }
 
 .container {
