--- a/test/src/components/home_page/ShowCard.css
+++ b/test/src/components/home_page/ShowCard.css
@@ -1,9 +1,9 @@
 #image{
     font-size: 15px;
-    max-width: 45%;
+    max-width: 100%;
     border-right: solid 1px;
     border-bottom: solid 1px;
-
+    height:100%;
 }
 
 #description{
