--- a/test/anirec/src/components/HomePageShowCard.css
+++ b/test/anirec/src/components/HomePageShowCard.css
@@ -1,4 +1,4 @@
-#image{
+#HomePage_card_image{
     font-size: 15px;
     max-width: 100%;
     border-right: solid 1px;
@@ -8,12 +8,12 @@
     height:100%;
 }
 
-#description{
+#HomePage_card_description{
     width: 55%;
     border-right: solid 1px;
 }
 
-#title{
+#HomePage_card_title{
     font-size: 20px;
     margin-left: 0px;
     margin-right: 0px;
@@ -21,20 +21,20 @@
     border-top: solid 1px;
 }
 
-#text{
+#HomePage_card_text{
     padding: 1px;
     margin-bottom: 0px;
     line-height: 1;
 }
 
-#genres{
+#HomePage_card_genres{
     font-size: 15px;
     margin-left: 0px;
     margin-right: 0px;
     border-bottom: solid 1px;
 }
 
-#studio{
+#HomePage_card_studio{
     font-size: 15px;
     margin-left: 0px;
     margin-right: 0px;
@@ -48,6 +48,6 @@
     border-bottom: solid 1px;
 }
 
-#card{
+#HomePage_cards{
     height: fit-content;
 }
