now onto dynamic parameter passing

--- a/test/anirec/src/components/ListingPageShowCard.css
+++ b/test/anirec/src/components/ListingPageShowCard.css
@@ -1,43 +1,51 @@
 #ListingPage_cards_image{
     font-size: 15px;
-    border-right: solid 1px;
-    border-left: solid 1px;
-    border-top: solid 1px;
+    border: solid 1px;
+    max-height: 300px;
+    width: 225px;
 }
 
 /*#ListingPage_cards_description{
     width: 55%;
     border-right: solid 1px;
 }
+*/
 
-#ListingPage_cards_title{
+#ListingPage_card_text{
     font-size: 20px;
     margin-left: 0px;
     margin-right: 0px;
-    border-bottom: solid 1px;
-    border-top: solid 1px;
 }
 
-#ListingPage_cards_text{
+#ListingPage_cards_title{
     padding: 1px;
     margin-bottom: 0px;
+    max-width: 225px;
     line-height: 1;
+    border-left: solid 1px;
+    border-right: solid 1px;
+    border-bottom: solid 1px; 
 }
-
-#ListingPage_cards_genres{
-    font-size: 15px;
-    margin-left: 0px;
-    margin-right: 0px;
+#ListingPage_cards_genre{
+    padding: 1px;
+    margin-bottom: 0px;
+    max-width: 225px;
+    line-height: 1;
+    border-left: solid 1px;
+    border-right: solid 1px;
     border-bottom: solid 1px;
 }
 
-#ListingPage_cards_studio{
-    font-size: 15px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-bottom: auto;
+#ListingPage_cards_studios{
+    padding: 1px;
+    margin-bottom: 10px;
+    max-width: 225px;
+    line-height: 1;
+    border-left: solid 1px;
+    border-right: solid 1px;
+    border-bottom: solid 1px;
 }
-
+/*
 #key_staff{
     font-size: 15px;
     margin-left: 0px;
@@ -45,6 +53,6 @@
     border-bottom: solid 1px;
 }
 */
-#ListingPage_cards{
-    height: fit-content;
+#ListingPage_card{
+    height: 500px;
 }
