--- a/test/anirec/src/pages/landing_page/LandingPage.css
+++ b/test/anirec/src/pages/landing_page/LandingPage.css
@@ -25,7 +25,7 @@
   width:100%;
 }
 
-.container {
+.landingpage-container {
   height: 100vh;
   width: 100vh;
   background-color: rgb(204, 204, 204);
