--- a/test/anirec/src/pages/home_page/Homepage.css
+++ b/test/anirec/src/pages/home_page/Homepage.css
@@ -6,23 +6,15 @@
     flex-direction: column;
   }
 
-.anime-search {
-    text-align: center;
-  }
-
-h2{
-  /*text-decoration: underline; */
-  border-bottom: solid 5px;
-}
-
+/* subtitles above show feed*/
 #subtitle{
     width:100%;
     margin: auto;
-
 }
 
+/* grey bar next to subtitles*/
 #grey{
-    border-bottom: solid 3px;
+    border-bottom: solid 4px;
     color: #D8D8D8;
 }
 
@@ -36,11 +28,7 @@ span{
 
 .trending_airing_link{
   color: #AA80FF;
-}
-
-.trending_airing_link:hover{
-  background-size: 4px 50px;
-  color: white;
+  padding-left: 5px;
 }
 
 #feed_body .col{
@@ -60,28 +48,59 @@ span{
   background-color: white;
 }
 
-#pink{
+/* pink subtitle w/ animations */
+.pink{
   color: #FF66CC;
-  border-bottom: solid 3px; 
+  background: 
+    linear-gradient(
+      to bottom,
+      #FF66CC 0%,
+      #FF66CC 100% 
+    );
+  background-position: 0 100%;
+  background-repeat: repeat-x;
+  background-size: 4px 4px;
+  text-decoration: none;
+  transition: background-size .4s;
 }
 
-#purple{
+.pink:hover{
+  background-size: 4px 50px;
+}
+
+.pink:hover span, .pink.hover span{
+  color: white;
+  transition-delay: .15s;
+}
+
+/* try-this subtitle*/
+#try-this{
+  padding-left: 8px;
+}
+
+/* purple subtitle w/ animations */
+.purple{
   color: #AA80FF;
   background: 
     linear-gradient(
-      to bottom,#AA80FF 0%,
+      to bottom,
+      #AA80FF 0%,
       #AA80FF 100% 
     );
   background-position: 0 100%;
   background-repeat: repeat-x;
   background-size: 4px 4px;
   text-decoration: none;
-  transition: background-size .2s;
+  transition: background-size .4s;
 }
 
 .purple:hover{
   background-size: 4px 50px;
+}
+
+.purple:hover .trending_airing_link, .purple.hover .trending_airing_link{
   color: white;
+  transition-delay: .15s;
 }
 
 #main_content{
