--- a/test/anirec/src/components/ListingPageShowCard.css
+++ b/test/anirec/src/components/ListingPageShowCard.css
@@ -1,58 +1,89 @@
-#ListingPage_cards_image{
+#listingpage-card-image{
     font-size: 15px;
-    border: solid 1px;
     max-height: 300px;
     width: 225px;
+    transition: all 0.3s ease-out;
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    float: left;
+    display: inline-block;
+    box-shadow:
+    0px 1px 6px 1px rgba(0,0,0,0.75)
 }
 
-/*#ListingPage_cards_description{
-    width: 55%;
-    border-right: solid 1px;
+#listingpage-card-image img{
+    height: 100%;
+    width: 100%;
 }
-*/
 
-#ListingPage_card_text{
+.listingpage-card-hover-info-outer{
+    background: rgba(27, 26, 26, 0.75);
+    transition: all 0.3s ease-out;
+    transform: translateX(110%);
+    position: absolute;
+    line-height: 1;
+    text-align: left;
+    color: white;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    font-size: 80%;
+
+    padding: 1rem 2rem 2rem 2rem;
+    border: 2.5px solid;
+    border-image: linear-gradient(to right, #FF66CC, #AA80FF);
+    border-image-slice: 1;
+}
+
+#listingpage-card-image:hover .listingpage-card-hover-info-outer{
+    transform: translateX(0);
+}
+
+.homepage-card-hover-info-outer .row{
+    transition: 0.3 ease;
+}
+
+#listingpage-card-image:hover img{
+    transition: all 0.3s ease-out;
+    transform: scale(1.2, 1.2);
+}
+
+#listingpage-card-text{
     font-size: 20px;
     margin-left: 0px;
     margin-right: 0px;
 }
 
-#ListingPage_cards_title{
-    padding: 1px;
+#listingpage-card-title{
     margin-bottom: 0px;
     max-width: 225px;
     line-height: 1;
-    border-left: solid 1px;
-    border-right: solid 1px;
-    border-bottom: solid 1px; 
-}
-#ListingPage_cards_genre{
-    padding: 1px;
-    margin-bottom: 0px;
-    max-width: 225px;
-    line-height: 1;
-    border-left: solid 1px;
-    border-right: solid 1px;
-    border-bottom: solid 1px;
+    border-bottom: 1px solid white;
+    padding: 0px 1px 0.5rem 1px;
+    font-size: 20px;
 }
 
-#ListingPage_cards_studios{
-    padding: 1px;
+#listingpage-card-genre{
+    margin-bottom: 0px;
+    max-width: 225px;
+    line-height: 1;
+    border-bottom: 1px solid white;
+    padding: 0.5rem 1px 0.5rem 1px;
+}
+
+#tag-links{
+    text-decoration: none;
+}
+
+#listingpage-card-studios{
+    padding: 0.5rem 1px 0.5rem 1px;
     margin-bottom: 10px;
     max-width: 225px;
     line-height: 1;
-    border-left: solid 1px;
-    border-right: solid 1px;
-    border-bottom: solid 1px;
 }
-/*
-#key_staff{
-    font-size: 15px;
-    margin-left: 0px;
-    margin-right: 0px;
-    border-bottom: solid 1px;
-}
-*/
+
 #ListingPage_card{
     height: 500px;
 }
