--- a/test/anirec/src/components/ListingPageShowCard.css
+++ b/test/anirec/src/components/ListingPageShowCard.css
@@ -76,6 +76,10 @@
     font-size: 20px;
 }
 
+#listingpage-card-title-text:hover{
+    text-decoration: none;
+}
+
 #listingpage-card-genre{
     margin-bottom: 0px;
     max-width: 225px;
