--- a/test/anirec/src/pages/content_pages/show_page.css
+++ b/test/anirec/src/pages/content_pages/show_page.css
@@ -2,3 +2,44 @@
     border:solid 1px;
     
 }
+
+.back_btn{
+    font-size: 20px;
+}
+
+
+#back-btn-space{
+    padding-bottom: 30px;
+}
+
+.show-page-title{
+    font-size: 30px;
+}
+
+#side-btns{
+    background-color: white;
+    width:100%;
+    height: 100%;
+    border: 0px;
+    color: black;
+}
+
+#side-btns:hover{
+    background-color: #007bff;
+    border: 0px;
+    color: white;
+}
+
+#tab-name{
+    width:100%;
+    padding: 0px 0px 0px 0px;
+    margin: 5px 0px 5px 0px;
+}
+
+#show-page-left-side{
+    flex-grow: 0;
+}
+
+#show-page-button-group{
+    width:100%;
+}
