--- a/test/anirec/src/components/HomePageShowCard.css
+++ b/test/anirec/src/components/HomePageShowCard.css
@@ -19,7 +19,7 @@
     width: 50%;
     display: inline-block;
     box-shadow:
-        0px 1px 6px 1px rgba(0,0,0,0.75)
+        0px 1px 6px 1px rgba(0,0,0,0.75);
 
 }
 
