--- a/test/anirec/src/pages/home_page/Homepage.css
+++ b/test/anirec/src/pages/home_page/Homepage.css
@@ -26,20 +26,20 @@ span{
   font-size: 25px;
 }
 
-.trending_airing_link{
+.general-showmore-link{
   color: #AA80FF;
   padding-left: 5px;
 }
 
-.trending_airing_link:hover{
+.general-showmore-link:hover{
   text-decoration: none;
 }
 
-#feed_body .col{
+#feed-body .col{
   padding: 0px 0px 0px 0px;
 }
 
-#feed_col{
+#feed-col{
   max-width: 23.875%;
   height: 900px;
 }
@@ -102,12 +102,12 @@ span{
   background-size: 4px 50px;
 }
 
-.purple:hover .trending_airing_link, .purple.hover .trending_airing_link{
+.purple:hover .general-showmore-link, .purple.hover .general-showmore-link{
   color: white;
   transition-delay: .15s;
 }
 
-#main_content{
+#main-content{
   height: 100%;
   color: black;
   padding: 20px 0px 0px 0px;
