--- a/test/anirec/src/pages/landing_page/Wallpaper.css
+++ b/test/anirec/src/pages/landing_page/Wallpaper.css
@@ -1,7 +1,5 @@
-.img-box{
-    display: inline-flex;
-}
-
+/* attempted to make animations */
+/* 
 .wallpaper-img{
     height: 100vh;
     width: 100%;
@@ -12,13 +10,14 @@
 
 .wallpaper-img:nth-child(n){
     animation-delay: 2.5s;
-}
+} */
 
 .img-wrapper{
     position:relative;
     width: 100%;
 }
 
+/* gray overlay */
 .img-overlay{
     position: absolute;
     top: 0;
@@ -26,4 +25,9 @@
     width: 100%;
     height: 100%;
     background-color: rgba(46,46,46,0.75);
+}
+
+/* img under */
+.img-box{
+    display: inline-flex;
 }
