--- a/test/anirec/src/pages/listing_pages/GeneralShowMore.css
+++ b/test/anirec/src/pages/listing_pages/GeneralShowMore.css
@@ -1,3 +1,4 @@
+/* back btn */
 .back_btn{
     color: #5B84D7;
     font-size: 20px;
@@ -7,7 +8,7 @@
     padding-bottom: 10px;
 }
 
-
+/* main grid content */
 #grid-content{
     margin: auto;
     padding: 20px 0px 0px 0px;
@@ -17,6 +18,7 @@
     padding-bottom: 2.5%;
 }
 
+/* pagination */
 .page-btn{
     color: #AA80FF;
     margin-right: 25px;
