--- a/test/anirec/src/pages/home_page/Homepage.css
+++ b/test/anirec/src/pages/home_page/Homepage.css
@@ -35,6 +35,15 @@ span{
   text-decoration: none;
 }
 
+.user-showmore-link{
+  color: #FF66CC;
+  padding-left: 5px;
+}
+
+.user-showmore-link:hover{
+  text-decoration: none;
+}
+
 #feed-body .col{
   padding: 0px 0px 0px 0px;
 }
